--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
-    "axios": "^1.7.7",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.456.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
